--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
     "name": "react-hideandseekmenu",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "A simple hook to hide and show your site's menubar when scrolling.",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/tlorent/react-hideandseekmenu"
+    },
     "scripts": {
         "build": "rollup -c",
         "start": "rollup -c -w",
@@ -16,11 +20,15 @@
         "typecheck": "tsc --project . --noEmit"
     },
     "keywords": [
-        "react menu",
         "react",
-        "menu"
+        "menubar",
+        "navigation",
+        "hide react navigation",
+        "scroll react navigation",
+        "hide react menubar",
+        "scroll react menubar"
     ],
-    "author": "",
+    "author": "tlorent",
     "license": "MIT",
     "dependencies": {
         "@types/debounce": "^1.2.0",
