--- a/package.json
+++ b/package.json
@@ -32,13 +32,12 @@
     "license": "MIT",
     "dependencies": {
         "@types/debounce": "^1.2.0",
-        "@types/react": "^17.0.0",
-        "debounce": "^1.2.0",
-        "react": "^17.0.1"
+        "debounce": "^1.2.0"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^4.9.1",
         "@typescript-eslint/parser": "^4.9.1",
+        "@types/react": "^17.0.0",
         "babel-core": "^6.26.3",
         "babel-runtime": "^6.26.0",
         "eslint": "^7.15.0",
@@ -48,6 +47,7 @@
         "husky": "^4.3.5",
         "lint-staged": "^10.5.3",
         "prettier": "^2.2.1",
+        "react": "^17.0.1",
         "rollup": "^2.34.2",
         "rollup-plugin-typescript2": "^0.29.0",
         "typescript": "^4.1.2"
